--- a/flashinfer/csrc/single_prefill_customize_config_hip.jinja
+++ b/flashinfer/csrc/single_prefill_customize_config_hip.jinja
@@ -1,5 +1,5 @@
 #pragma once
-#include <gpu_iface/math.cuh>
+#include <gpu_iface/math_ops.hpp>
 #include <gpu_iface/layout.cuh>
 #include <gpu_iface/utils.cuh>
 #include <gpu_iface/fastdiv.cuh>
