--- a/flashinfer/csrc/batch_prefill_customize_config_hip.jinja
+++ b/flashinfer/csrc/batch_prefill_customize_config_hip.jinja
@@ -2,10 +2,10 @@
 #include <gpu_iface/math_ops.hpp>
 #include <gpu_iface/layout.cuh>
 #include <gpu_iface/utils.cuh>
+#include <gpu_iface/fastdiv.cuh>
 
 #include <flashinfer/attention/generic/page.cuh>
 #include <flashinfer/attention/generic/pos_enc.cuh>
-#include <flashinfer/attention/generic/fastdiv.cuh>
 #include <flashinfer/attention/generic/variant_helper.cuh>
 
 #define ADDITIONAL_FUNC_PARAMS {{ additional_func_params }}
