Remove *_hip suffix from all rocm csrc modules

--- a/flashinfer/csrc_rocm/batch_decode_customize_config.jinja
+++ b/flashinfer/csrc_rocm/batch_decode_customize_config.jinja
@@ -1,9 +1,10 @@
 #pragma once
-#include <flashinfer/page.cuh>
-#include <flashinfer/math.cuh>
-#include <flashinfer/layout.cuh>
-#include <flashinfer/pos_enc.cuh>
-#include <flashinfer/attention/variant_helper.cuh>
+#include <gpu_iface/math_ops.hpp>
+#include <gpu_iface/layout.cuh>
+
+#include <flashinfer/attention/generic/page.cuh>
+#include <flashinfer/attention/generic/pos_enc.cuh>
+#include <flashinfer/attention/generic/variant_helper.cuh>
 
 #define ADDITIONAL_FUNC_PARAMS {{ additional_func_params }}
 #define ADDITIONAL_PARAMS_SETTER {{ additional_params_setter }}
