Update uses of renamed .cu and .jinja files

--- a/flashinfer/csrc_rocm/batch_decode_kernel_inst.jinja
+++ b/flashinfer/csrc_rocm/batch_decode_kernel_inst.jinja
@@ -1,5 +1,5 @@
 #include <flashinfer/attention/generic/decode.cuh>
-#include "batch_decode_config_hip.inc"
+#include "batch_decode_config.inc"
 
 using namespace flashinfer;
 
