--- a/flashinfer/csrc_rocm/batch_prefill_paged_kernel_inst.jinja
+++ b/flashinfer/csrc_rocm/batch_prefill_paged_kernel_inst.jinja
@@ -1,5 +1,5 @@
 #include <flashinfer/attention/generic/prefill.cuh>
-#include "batch_prefill_config_hip.inc"
+#include "batch_prefill_config.inc"
 
 namespace flashinfer {
 
