--- a/flashinfer/csrc_rocm/single_decode_kernel_inst.jinja
+++ b/flashinfer/csrc_rocm/single_decode_kernel_inst.jinja
@@ -1,5 +1,5 @@
 #include <flashinfer/attention/generic/decode.cuh>
-#include "single_decode_config_hip.inc"
+#include "single_decode_config.inc"
 
 using namespace flashinfer;
 
