--- a/flashinfer/csrc_rocm/single_prefill_kernel_inst.jinja
+++ b/flashinfer/csrc_rocm/single_prefill_kernel_inst.jinja
@@ -1,5 +1,5 @@
 #include <flashinfer/attention/generic/prefill.cuh>
-#include "single_prefill_config_hip.inc"
+#include "single_prefill_config.inc"
 
 using namespace flashinfer;
 
